recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:4: error: identifier expected but 'while' found.
  while(sum!=360.){
  ^